# pontoon

./: .bumpversion.cfg  .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: build-docker.yaml  build.yaml
docker/: Dockerfile  server_run.sh
docker/config/: server.env
docker/k8s-first-steps/: server_run.sh  syncprojects.sh
docs/admin/: plain-json-entity-key-migration.rst
pontoon/administration/: forms.py
pontoon/administration/templates/: admin_project.html
pontoon/api/: serializers.py  urls.py  views.py
pontoon/api/tests/: test_views.py
pontoon/base/: admin.py  models.py  signals.py  views.py
pontoon/base/management/commands/: update_auth_providers.py
pontoon/base/migrations/: 0114_repository_readonly.py
pontoon/base/models/: locale.py  project.py  project_locale.py  repository.py  translated_resource.py
pontoon/base/static/css/: heading_info.css
pontoon/base/tests/models/: test_repository.py
pontoon/base/tests/views/: test_download.py
pontoon/contributors/static/css/: settings.css
pontoon/projects/: urls.py  utils.py  views.py
pontoon/projects/management/commands/: upload_translations.py
pontoon/projects/templates/projects/: project.html
pontoon/projects/tests/: test_utils.py
pontoon/settings/: base.py
pontoon/sync/: utils.py
pontoon/sync/core/: __init__.py  entities.py
pontoon/sync/tests/: test_e2e.py  test_utils.py
translate/src/context/: Locale.ts
