[project]
name = "Pontoon"
version = ""
description = ""
authors = [
    {name = "Dave Hao", email = "22258990+haodave@users.noreply.github.com"},
]
dependencies = [
    "amqp==5.1.1",
    "aniso8601==7.0.0",
    "apscheduler==3.9.1.post1",
    "asgiref==3.4.1",
    "billiard==3.6.4.0",
    "bleach==3.3.0",
    "blinker==1.4",
    "cachetools==5.2.0",
    "celery==5.2.6",
    "certifi==2021.10.8",
    "cffi==1.15.0",
    "charset-normalizer==2.0.7",
    "click==8.0.3",
    "click-didyoumean==0.3.0",
    "click-plugins==1.1.1",
    "click-repl==0.2.0",
    "colorama==0.4.6",
    "compare-locales==8.2.0",
    "cryptography==36.0.0",
    "defusedxml==0.7.1",
    "dj-database-url==0.3.0",
    "django==3.2.15",
    "django-ace==1.0.5",
    "django-allauth==0.51.0",
    "django-bmemcached==0.2.3",
    "django-cors-headers==3.5.0",
    "django-csp==3.7",
    "django-dirtyfields==1.3.1",
    "django-guardian==2.3.0",
    "django-jinja==2.7.0",
    "django-model-utils==4.2.0",
    "django-notifications-hq==1.6.0",
    "django-pipeline==2.0.6",
    "fluent-syntax==0.18.1",
    "google-api-core[grpc]==2.10.2",
    "google-auth==2.13.0",
    "google-cloud-core==2.3.2",
    "google-cloud-translate==3.8.4",
    "googleapis-common-protos==1.56.4",
    "graphene==2.1.9",
    "graphene-django==2.13.0",
    "graphql-core==2.3.2",
    "graphql-relay==2.0.1",
    "grpcio==1.50.0",
    "grpcio-status==1.50.0",
    "gunicorn==19.9.0",
    "idna==3.3",
    "jinja2==3.0.3",
    "joblib==1.1.0",
    "jsonfield==3.1.0",
    "jsonpickle==2.0.0",
    "jsonschema==2.6.0",
    "kombu==5.2.4",
    "lxml==4.9.1",
    "markupsafe==2.0.1",
    "mercurial==5.2.2",
    "newrelic==6.2.0.156",
    "numpy==1.24.2",
    "oauthlib==3.1.1",
    "packaging==21.3",
    "parsimonious==0.8.1",
    "polib==1.0.6",
    "portalocker==2.7.0",
    "promise==2.3",
    "prompt-toolkit==3.0.29",
    "proto-plus==1.22.1",
    "protobuf==4.21.8",
    "psycopg2==2.8.5",
    "pyasn1==0.4.8",
    "pyasn1-modules==0.2.8",
    "pycparser==2.21",
    "pyjwt[crypto]==2.4.0",
    "pyparsing==3.0.6",
    "python-binary-memcached==0.30.1",
    "python-dateutil==2.8.1",
    "python-dotenv==0.17.0",
    "python-levenshtein==0.12.2",
    "python3-openid==3.2.0",
    "pytoml==0.1.21",
    "pytz==2022.1",
    "pytz-deprecation-shim==0.1.0.post0",
    "raygun4py==4.3.0",
    "regex==2021.11.10",
    "requests==2.26.0",
    "requests-oauthlib==1.3.0",
    "rsa==4.9",
    "rx==1.6.1",
    "sacrebleu==2.3.1",
    "sacremoses==0.0.43",
    "silme @ https://github.com/mozilla/silme/archive/v0.11.2.zip",
    "singledispatch==3.7.0",
    "six==1.16.0",
    "sqlparse==0.4.2",
    "swapper==1.2.0",
    "tabulate==0.9.0",
    "tqdm==4.62.3",
    "translate-toolkit==3.3.2",
    "tzdata==2022.7",
    "tzlocal==4.2",
    "uhashring==2.1",
    "unidecode==1.3.2",
    "urllib3==1.26.7",
    "vine==5.0.0",
    "wcwidth==0.2.5",
    "webencodings==0.5.1",
    "werkzeug==2.0.2",
    "whitenoise==5.2.0",
    "wsgi-sslify==1.0.1"
]

requires-python = "==3.9.16"
license = {text = "MIT"}

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "asgiref==3.4.1",
    "build==0.8.0",
    "click==8.0.3",
    "django==3.2.15",
    "django-debug-toolbar==3.2.1",
    "django-extensions==3.0.9",
    "django-sslserver==0.19",
    "packaging==21.3",
    "pep517==0.12.0",
    "pip-tools==6.8.0",
    "pyparsing==3.0.6",
    "pytz==2022.1",
    "sqlparse==0.4.2",
    "tomli==1.2.2",
    "wheel==0.37.1",
    "ipython>=8.8.0",
    "ipython-nord-theme>=0.1.0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
